Force network error and DMServer responds with error for enrolled device

Bug: chromium:800683
Test: Manual
Change-Id: I188acabb82da1da358a1280091bd73c2ba262c75